# edustatus

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CODING_STANDARDS.md  CODING_STANDARDS_COMPLIANCE_REPORT.md  COMPLIANCE_REPORT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  jest.config.js  package-lock.json  package.json  pg_hba.conf
backend/prisma/: prisma.config.ts  schema.distributed.prisma  schema.prisma  seed.sql  seed.ts
docs/: BACKEND-MIGRATION.md  api.md  database.md  frontend-architecture.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
plans/: financial-system-plan.md  presentation-guide.md  rust-go-integration-plan.md  ui-design-plan.md
services/rust-core/: Cargo.toml  Dockerfile
services/rust-core/migrations/: 0001_initial.sql  0002_org_shard_placement.sql  0003_rls_tenant.sql
services/rust-core/src/: config.rs  errors.rs  main.rs  state.rs  tenancy.rs
services/rust-core/src/anomaly/: detector.rs  mod.rs
services/rust-core/src/attendance/: handlers.rs  mod.rs  models.rs
services/rust-core/src/audit/: mod.rs  models.rs
services/rust-core/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  service.rs
services/rust-core/src/bank_records/: handlers.rs  mod.rs  models.rs
services/rust-core/src/billing/: engine.rs  handlers.rs  mod.rs  models.rs
services/rust-core/src/clients/: handlers.rs  mod.rs  models.rs  service.rs
services/rust-core/src/contracts/: handlers.rs  mod.rs  models.rs
services/rust-core/src/dashboard/: mod.rs
services/rust-core/src/departments/: handlers.rs  mod.rs  models.rs
services/rust-core/src/events/: mod.rs
services/rust-core/src/health/: handlers.rs  mod.rs
services/rust-core/src/organizations/: handlers.rs  mod.rs  models.rs  service.rs
services/rust-core/src/payments/: mod.rs
services/rust-core/src/realtime/: hub.rs  mod.rs  websocket.rs
services/rust-core/src/reminders/: handlers.rs  mod.rs  models.rs
services/rust-core/src/sharding/: mod.rs
services/rust-core/src/users/: handlers.rs  mod.rs  models.rs  service.rs
services/shard-manager/: Cargo.toml  Dockerfile
services/shard-manager/src/: main.rs
web/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  (+3 more)
(+331 files in other folders)
