[package]
name = "rust-core"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rust-core"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Middleware
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors", "trace", "compression-gzip",
    "timeout", "limit", "request-id", "set-header"
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "uuid",
    "chrono", "json", "migrate"
] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = { version = "0.22", features = ["std"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
dashmap = "6"
once_cell = "1"
parking_lot = "0.12"

# HTTP client (for internal calls to go-connectors)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Futures
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"
